[package]
name = "oicana"
version = "1.2.1-dev"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"
publish = false

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "oicana_plugin/default"
]

native = [
    "bevy/bevy_wgpu",
    "oicana_plugin/native"
]

web = [
    "bevy_webgl2"
]

[dependencies]
bevy = {version="0.4.0", default-features=false}
bevy_webgl2 = {version="0.4.0", optional=true}
winit = "0.24.0"
oicana_plugin = { path = "crates/oicana_plugin", version = "0.1.0" }
