[package]
name = "oicana"
description = "A tower-defense game with some puzzle aspects"
version = "1.4.1-dev"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
publish = false

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11"
]

[dependencies]
bevy = {version="0.6.0", default-features = false}
oicana_plugin = { path = "oicana_plugin", version = "0.1.0" }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
