[package]
name = "oicana"
description = "A tower-defense game with some puzzle aspects"
version = "1.6.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
publish = false

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11"
]

[dependencies]
bevy = { version = "0.7", default-features = false}
bevy_kira_audio = { version = "0.9" }
bevy_asset_loader =  { version = "0.10" }
bevy_prototype_lyon = { version = "0.5" }
rand = { version = "0.8" }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
