[package]
name = "oicana_plugin"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"
publish = false

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu"
]

[dependencies]
bevy = { version = "0.5.0", default-features = false}
bevy_kira_audio = "0.5.1"
bevy_asset_loader =  { version = "0.2.1" }
bevy_prototype_lyon = "0.3.0"
lyon_tessellation = "0.17.5"
rand = "0.8.1"
