[package]
name = "oicana_plugin"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
publish = false

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

[dependencies]
bevy = { version = "0.6.0", default-features = false}
bevy_kira_audio = "0.8"
bevy_asset_loader =  { version = "0.8" }
bevy_prototype_lyon = "0.4.0"
rand = "0.8.1"
