[package]
name = "game_plugin"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"
publish = false

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png"
]

native = [
    "bevy/bevy_wgpu"
]

[dependencies]
bevy = {version="0.4.0", default-features=false}
