[package]
name = "game_plugin"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"
publish = false

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png"
]

native = [
    "bevy/bevy_wgpu",
    "bevy/bevy_audio",
    "bevy/mp3"
]

[dependencies]
bevy = {version="0.4.0", default-features=false}
bevy_prototype_lyon = "0.1.5"
rand = "0.8.1"
